Update NetworkUtils